--- a/src/main/webapp/resources/css/jumbotron.css
+++ b/src/main/webapp/resources/css/jumbotron.css
@@ -1,8 +1,27 @@
 /* Move down content because we have a fixed navbar that is 3.5rem tall */
 body {
+    padding-top: 1.5rem;
+}
+
+main{
     padding-top: 3.5rem;
+}
+
+main.index{
+    padding-top: 0rem;
 }
 
 .vertical_space{
     padding-top: 1.5rem ;
+}
+
+
+.jumbotron {
+    width: 100%;
+    background: linear-gradient(45deg, rgba(29, 224, 153, 0.8), rgba(29, 200, 205, 0.8))
+    /*background: linear-gradient(45deg, rgba(203, 124, 65, 0.8), rgba(222, 165, 61, 0.8))*/
+    , url("/resources/images/ui/intro-bg.jpg") center top no-repeat;
+    background-size: cover;
+    position: relative;
+    border-radius: 0rem;
 }
