--- a/src/main/webapp/resources/css/jumbotron.css
+++ b/src/main/webapp/resources/css/jumbotron.css
@@ -32,3 +32,9 @@ main.index{
 #myTab{
     margin-bottom: 1rem ;
 }
+
+.graph-fullscreen {
+    display:block;
+    width: 100%;
+    height: 640px;
+}
