--- a/src/main/webapp/resources/css/jumbotron.css
+++ b/src/main/webapp/resources/css/jumbotron.css
@@ -1,22 +1,31 @@
+/*--------------------------------------------------------------
+# Odsazeni nahore - aby se nic neprekryvalo s menu
+--------------------------------------------------------------*/
+
 body {
     /* Move down content because we have a fixed navbar that is 3.5rem tall */
     padding-top: 1.5rem;
 }
 
-main{
+main {
     padding-top: 3.5rem;
 }
 
-footer{
-    padding-top: 2.0rem ;
+footer {
+    padding-top: 2.0rem;
 }
 
-main.index{
+main.index {
     padding-top: 0rem;
 }
 
-.jumbotron {
+/*--------------------------------------------------------------
+# Hlavni stranka
+--------------------------------------------------------------*/
+
+#jumbotron {
     width: 100%;
+    height: 100vh;
     background: linear-gradient(45deg, rgba(29, 224, 153, 0.8), rgba(29, 200, 205, 0.8))
     /*background: linear-gradient(45deg, rgba(203, 124, 65, 0.8), rgba(222, 165, 61, 0.8))*/
     , url("/resources/images/ui/intro-bg.jpg") center top no-repeat;
@@ -25,16 +34,140 @@ main.index{
     border-radius: 0rem;
 }
 
-.progress {
-    margin-top: 2rem ;
+@media (min-width: 1024px) {
+    #jumbotron {
+        background-attachment: fixed;
+    }
 }
 
-#myTab{
-    margin-bottom: 1rem ;
+#jumbotron .jumbotron-text {
+    position: absolute;
+    left: 0;
+    top: 60px;
+    right: 0;
+    height: calc(50% - 60px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+}
+
+#jumbotron h2 {
+    margin: 30px 0 10px 0;
+    padding: 0 15px;
+    font-size: 48px;
+    font-weight: 400;
+    line-height: 56px;
+    color: #fff;
+}
+
+@media (max-width: 768px) {
+    #jumbotron h2 {
+        font-size: 28px;
+        line-height: 36px;
+    }
+}
+
+#jumbotron p {
+    color: #fff;
+    margin-bottom: 20px;
+    padding: 0 15px;
+    font-size: 24px;
+    width: 60%;
+}
+
+@media (max-width: 768px) {
+    #jumbotron p {
+        font-size: 18px;
+        line-height: 24px;
+        margin-bottom: 20px;
+        width: 60%;
+    }
+}
+
+#jumbotron .btn-get-started {
+    font-family: "Bree Serif", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    letter-spacing: 1px;
+    display: inline-block;
+    padding: 8px 28px;
+    border-radius: 50px;
+    transition: 0.5s;
+    margin: 10px;
+    border: 2px solid #fff;
+    color: #fff;
+}
+
+#jumbotron .btn-get-started:hover {
+    color: #dea53d;
+    background: #fff;
+}
+
+#jumbotron .product-screens {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    overflow: hidden;
+    text-align: center;
+    width: 100%;
+    height: 50%;
+}
+
+#jumbotron .product-screens img {
+    box-shadow: 0px -2px 19px 4px rgba(0, 0, 0, 0.29);
+}
+
+#jumbotron .product-screens .product-screen-1 {
+    position: absolute;
+    z-index: 30;
+    left: calc(50% + 54px);
+    bottom: 0;
+    top: 30px;
+}
+
+#jumbotron .product-screens .product-screen-2 {
+    position: absolute;
+    z-index: 20;
+    left: calc(50% - 154px);
+    bottom: 0;
+    top: 90px;
+}
+
+#jumbotron .product-screens .product-screen-3 {
+    position: absolute;
+    z-index: 10;
+    left: calc(50% - 374px);
+    bottom: 0;
+    top: 150px;
+}
+
+@media (max-width: 767px) {
+    #jumbotron .product-screens .product-screen-1 {
+        position: static;
+        padding-top: 30px;
+    }
+
+    #jumbotron .product-screens .product-screen-2, #jumbotron .product-screens .product-screen-3 {
+        display: none;
+    }
+}
+
+/*--------------------------------------------------------------
+# Grafy a algoritmy
+--------------------------------------------------------------*/
+.progress {
+    margin-top: 2rem;
+}
+
+#myTab {
+    margin-bottom: 1rem;
 }
 
 .graph-fullscreen {
-    display:block;
+    display: block;
     width: 100%;
     height: 640px;
 }
