--- a/src/main/webapp/resources/css/jumbotron.css
+++ b/src/main/webapp/resources/css/jumbotron.css
@@ -20,15 +20,46 @@ main.index {
 }
 
 /*--------------------------------------------------------------
+# Clanky a komentare
+--------------------------------------------------------------*/
+.text-long {
+    line-height: 1.6;
+    text-align: justify;
+}
+/*--------------------------------------------------------------
+# Grafy a algoritmy
+--------------------------------------------------------------*/
+.progress {
+    margin-top: 2rem;
+}
+
+#myTab {
+    margin-bottom: 1rem;
+}
+
+.comment-section {
+    margin-top: 2rem;
+}
+
+.graph-fullscreen {
+    display: block;
+    width: 100%;
+    height: 640px;
+}
+
+/*--------------------------------------------------------------
 # Hlavni stranka
 --------------------------------------------------------------*/
+.section-header {
+    padding-bottom: 3.5rem;
+}
 
+/* Jumbotron
+--------------------------------*/
 #jumbotron {
     width: 100%;
     height: 100vh;
-    background: linear-gradient(45deg, rgba(29, 224, 153, 0.8), rgba(29, 200, 205, 0.8))
-    /*background: linear-gradient(45deg, rgba(203, 124, 65, 0.8), rgba(222, 165, 61, 0.8))*/
-    , url("/resources/images/ui/intro-bg.jpg") center top no-repeat;
+    background: linear-gradient(45deg, rgba(29, 224, 153, 0.8), rgba(29, 200, 205, 0.8)) /*background: linear-gradient(45deg, rgba(203, 124, 65, 0.8), rgba(222, 165, 61, 0.8))*/, url("/resources/images/ui/jumbotron-bg.jpg") center top no-repeat;
     background-size: cover;
     position: relative;
     border-radius: 0rem;
@@ -155,19 +186,54 @@ main.index {
     }
 }
 
-/*--------------------------------------------------------------
-# Grafy a algoritmy
---------------------------------------------------------------*/
-.progress {
-    margin-top: 2rem;
+/* Nas tym
+--------------------------------*/
+#team {
+    padding: 60px 0;
+    overflow: hidden;
 }
 
-#myTab {
-    margin-bottom: 1rem;
+#team .member {
+    text-align: center;
+    margin-bottom: 20px;
 }
 
-.graph-fullscreen {
+#team .member .pic {
+    margin-bottom: 15px;
+    overflow: hidden;
+    height: 260px;
+}
+
+#team .member .pic img {
+    max-width: 70%;
+    border-radius: 50%;
+}
+
+#team .member h4 {
+    font-weight: 700;
+    margin-bottom: 2px;
+    font-size: 18px;
+}
+
+#team .member span {
+    font-style: italic;
     display: block;
-    width: 100%;
-    height: 640px;
+    font-size: 13px;
+}
+
+#team .member .social {
+    margin-top: 15px;
+}
+
+#team .member .social a {
+    color: #b3b3b3;
+}
+
+#team .member .social a:hover {
+    color: #dea53d;
+}
+
+#team .member .social i {
+    font-size: 18px;
+    margin: 0 2px;
 }
