--- a/src/main/webapp/resources/css/login.css
+++ b/src/main/webapp/resources/css/login.css
@@ -4,18 +4,22 @@ body {
 }
 
 body {
-  display: -ms-flexbox;
-  display: -webkit-box;
-  display: flex;
-  -ms-flex-align: center;
-  -ms-flex-pack: center;
-  -webkit-box-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  justify-content: center;
-  padding-top: 40px;
+  /*display: -ms-flexbox;*/
+  /*display: -webkit-box;*/
+  /*display: flex;*/
+  /*-ms-flex-align: center;*/
+  /*-ms-flex-pack: center;*/
+  /*-webkit-box-align: center;*/
+  /*!*align-items: center;*!*/
+  /*-webkit-box-pack: center;*/
+  /*justify-content: center;*/
+  padding-top: 5.5rem;
   padding-bottom: 40px;
+
   background-color: #f5f5f5;
+  /*display: flex;*/
+  /*align-items: center;*/
+  /*justify-content: center;*/
 }
 
 .form-signin {
@@ -23,10 +27,19 @@ body {
   max-width: 330px;
   padding: 15px;
   margin: 0 auto;
+
+
 }
+.space{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .form-signin .checkbox {
   font-weight: 400;
 }
+
 .form-signin .form-control {
   position: relative;
   box-sizing: border-box;
